Silliest things happen to the silliest people

--- a/views/dir.ejs
+++ b/views/dir.ejs
@@ -4,7 +4,7 @@
 	</head>
 	<body>                                                                <% files.forEach((f) => { %>     
 		<a href="<%= join(f.path, f.name)  %>">
-		<%= `${f.type === true ? 'File' : 'Folder'} - ${f.name}` %> <br>
+		<%= `${f.type ? 'File' : 'Folder'} - ${f.name}` %> <br>
 		</a>
 		<% }) %>
 	</body>
