--- a/views/dir.ejs
+++ b/views/dir.ejs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>                                                                <head>                                                                <title>View of <%= path %></title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>                                                                <% files.forEach((f) => { %>     
+<html>
+
+<head>
+	<title>View of <%= path %></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+	<% files.forEach((f)=> { %>
 		<a href="<%= join(f.path, f.name)  %>">
-		<%= `${f.type ? 'File' : 'Folder'} - ${f.name}` %> <br>
+			<%= `${f.type ? 'File' : 'Folder' } - ${f.name}` %> <br>
 		</a>
-		<% }) %>
-	</body>
+	<% }) %>
+</body>
+
 </html>
