--- a/views/android-packages.ejs
+++ b/views/android-packages.ejs
@@ -9,7 +9,7 @@
 
 <body>
 	<% packages.forEach(package => { %>
-		<a href="<%= package %>">
+		<a href="/package/<%= package %>.apk">
 			<%= package %>
 		</a><br>
 	<% }) %>
