--- a/views/dir.ejs
+++ b/views/dir.ejs
@@ -9,7 +9,7 @@
 
 <body>
 	<% files.forEach((f)=> { %>
-		<a href="<%= join(f.path, f.name)  %>">
+		<a href="<%= encodeURIComponent(join(f.path.slice(1), f.name)) %>">
 			<%= `${f.type ? 'File' : 'Folder' } - ${f.name}` %> <br>
 		</a>
 	<% }) %>
